# agent-context-guard

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: context-guard.yml
benchmarks/: README.md  injection_corpus.jsonl  run_corpus.py
examples/unsafe_repo/: .env.example  README.md  app.py
src/agent_context_guard/: __init__.py  cli.py  packer.py  policy.py  sarif.py  scanner.py
tests/: test_cli.py  test_corpus.py  test_override_variants.py  test_scanner.py
