[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-context-guard"
version = "0.2.0"
description = "Pack code for AI agents without leaking secrets or prompt-injection traps."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "zxy" }]
keywords = ["ai", "llm", "agents", "prompt-injection", "security", "context", "cli"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Security",
  "Topic :: Software Development :: Build Tools",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/zxyasfas/agent-context-guard"
Issues = "https://github.com/zxyasfas/agent-context-guard/issues"

[project.scripts]
acg = "agent_context_guard.cli:main"
promptfence = "agent_context_guard.cli:main"
agent-context-guard = "agent_context_guard.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
